--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,24 +11,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SprinklesBakery.NoActionBar">
         <activity
-            android:screenOrientation="portrait"
+            android:name=".ViewProduct"
+            android:exported="false" />
+        <activity
             android:name=".Home"
             android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".Register"
             android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".Login"
             android:exported="false"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
-            android:screenOrientation="portrait"
             android:name=".SplashScreen"
             android:exported="true"
+            android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
